--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
 		"react/react-in-jsx-scope": 0,
 		"react/prop-types": 0,
 		"import/extensions": 0,
-		"import/no-unresolved": 0
+		"import/no-unresolved": 0,
+		"react/no-unescaped-entities": 0
 	}
 }
