--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
 		"react/prop-types": 0,
 		"import/extensions": 0,
 		"import/no-unresolved": 0,
-		"react/no-unescaped-entities": 0
+		"react/no-unescaped-entities": 0,
+		"import/no-extraneous-dependencies": 0
 	}
 }
