--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,9 @@
 		"import/extensions": 0,
 		"import/no-unresolved": 0,
 		"react/no-unescaped-entities": 0,
-		"import/no-extraneous-dependencies": 0
+		"import/no-extraneous-dependencies": 0,
+		"jsx-a11y/click-events-have-key-events": 0,
+		"jsx-a11y/no-static-element-interactions": 0,
+		"jsx-a11y/no-noninteractive-element-interactions": 0
 	}
 }
