--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.21",
+    "react-hook-form": "^7.43.1",
     "react-icons": "^4.7.1",
+    "react-slider": "^2.0.4",
     "tailwindcss": "^3.2.4"
   }
 }
